bak/app_center_bak/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-center-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: center.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: app-center
          servicePort: 9999
